--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,8 @@
       "port": 5001
     },
     "firestore": {
-      "port": 5002
+      "port": 5002,
+      "host": "0.0.0.0"
     },
     "ui": {
       "enabled": true
