--- a/firebase.json
+++ b/firebase.json
@@ -13,8 +13,8 @@
       "port": 8082
     },
     "firestore": {
-      "port": 8083,
-      "host": "0.0.0.0"
+      "host": "0.0.0.0",
+      "port": 8083
     },
     "ui": {
       "enabled": true
